--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 .playBtn {
   font-size: 450%;
-  color: white;
+  color: darkred;
   position: absolute;
   text-align: center;
   right: 46%;
